<resources>
    <string name="app_name">Georghe App</string>
    <string name="notes">My Notes</string>
    <string name="notes_title">Note Title</string>
    <string name="notes_sub_title">Note Sub Title</string>
    <string name="notes_desc">Start Writing</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="new_file">New</string>
    <string name="edit">Edit</string>
    <string name="start_file">Edit</string>
    <string name="search_file">Search in notes</string>
    <string name="search_main">Search</string>
    <string name="sort">Sort Files By</string>
    <string name="add_manual">Add External File</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text">Hello Android World</string>
    <string name="bg_welcome_user">Usuario Firebase</string>
    <string name="bg_welcome_date">dd/mm/yy</string>
    <string name="background">Add Picture</string>
    <string name="bg_changeBG">Exchangeable Background By Pressing Image</string>
    <string name="goBackInfo">This button brings you back to the main activity</string>
    <string name="saveNoteInfo">This button serves to save our current changes in our note</string>

    <string name="error_seed_db">Error seeding database</string>
    <string name="error_seed_db_name">Error seeding database - no valid filename</string>
    <string name="settingsFragment">TODO - Load Fragment Settings</string>
    <string name="noteCreated">TODO - New Quick Note Fragment</string>
    <string name="notesList">TODO - Show List Of Notes Fragment</string>

    <!-- TODO: Change Font Style Through Settings -->
    <string name="color_opt_one">purple_700</string>
    <string name="color_opt_two">ColorDarkGreenNote</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="toggle">Toggle Night Mode</string>
</resources>