<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".main.MainActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="416dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/standardBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/bg_changeBG"
            android:scaleType="centerCrop"
            android:src="@drawable/standard_background"></ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bg_welcome_user"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bg_welcome_date"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="30sp" />

        </LinearLayout>
    </FrameLayout>
    <!--<fragment
        android:id="@+id/nav_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_bottom_graph" />-->

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loadingMainBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/frame_container"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/loadingMainBar"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintTop_toBottomOf="@id/loadingMainBar" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/ColorGreenNote"
        app:fabAlignmentMode="end"
        app:fabAnimationMode="slide"
        app:fabCradleMargin="@dimen/_8sdp"
        app:fabCradleRoundedCornerRadius="@dimen/_32sdp"
        app:hideOnScroll="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/newNoteFragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/sort"
                android:saveEnabled="false"
                android:src="@drawable/ic_baseline_sort_24" />

            <ImageButton
                android:id="@+id/settingsFragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/add_manual"
                android:saveEnabled="false"
                android:src="@drawable/ic_add_manual_24" />

            <ImageButton
                android:id="@+id/notesListFragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/add_manual"
                android:saveEnabled="false"
                android:src="@drawable/ic_main_search_24" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/edit"
        android:enabled="false"
        android:src="@drawable/ic_main_button_add_24"
        android:tint="@color/ColorWhite"
        app:fabSize="normal"
        app:layout_anchor="@id/bottom_app_bar"
        app:maxImageSize="@dimen/_30sdp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>