<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_arrow_back_24"
        app:tint="@color/ColorDarkGreenNote" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_save_24"
        app:tint="@color/ColorDarkGreenNote" />

   <EditText
       android:id="@+id/edNoteTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="@dimen/_10sdp"
       android:layout_margin="@dimen/_10sdp"
       app:layout_constraintTop_toBottomOf="@id/imgBack"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:textColor="@color/ColorText"
       android:textSize="@dimen/_24ssp"
       android:fontFamily="@font/dancing_script_bold"
       android:textColorHint="@color/ColorText"
       android:hint="@string/notes_title"
       android:maxLines="1"
       android:ellipsize="end"
       />

   <LinearLayout
       android:id="@+id/subtitle1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="@dimen/_10sdp"
       app:layout_constraintTop_toBottomOf="@id/edNoteTitle"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:orientation="horizontal">
       <View
           android:layout_width="@dimen/_5sdp"
           android:layout_height="match_parent"
           android:layout_marginStart="@dimen/_5sdp"
           android:background="@color/purple_700"/>
    <EditText
        android:id="@+id/edNoteSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorText"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/dancing_script_regular"
        android:textColorHint="@color/ColorGray"
        android:hint="@string/notes_sub_title"
        android:maxLines="1"
        android:ellipsize="end"
        />
   </LinearLayout>

    <EditText
        android:id="@+id/edNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/ColorText"
        android:inputType="textMultiLine"
        android:textSize="@dimen/_20ssp"
        android:fontFamily="@font/dancing_script_regular"
        android:textColorHint="@color/ColorText"
        android:hint="@string/notes_desc" />


</androidx.constraintlayout.widget.ConstraintLayout>