<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_30sdp"
                android:textSize="@dimen/_18ssp"
                android:text="@string/test_text"/><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/test_text"/><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/test_text"/><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/test_text"/><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/test_text"/><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/test_text"/><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/test_text"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/ColorGreenNote"
        app:fabAlignmentMode="end"
        app:hideOnScroll="true"
        app:fabCradleMargin="@dimen/_8sdp"
        app:fabCradleRoundedCornerRadius="@dimen/_32sdp"
        app:fabAnimationMode="slide" >
        <!--app:menu="@menu/bottom_app_bar_menu />"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/sort_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/sort"
                android:saveEnabled="false"
                android:src="@drawable/ic_baseline_sort_24" />
            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/add_manual"
                android:saveEnabled="false"
                android:src="@drawable/ic_add_manual_24" />
            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/add_manual"
                android:saveEnabled="false"
                android:src="@drawable/ic_main_search_24" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3"/>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit"
        android:enabled="false"
        android:src="@drawable/ic_main_button_edit_24"
        app:maxImageSize="@dimen/_30sdp"
        app:fabSize="normal"
        android:background="@color/colorAccent"
        android:tint="@color/ColorWhite"
        app:layout_anchor="@id/bottom_app_bar" />
    <!--android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_main_button_edit_24"
        app:maxImageSize="@dimen/_30sdp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/edit"
        android:tint="@color/ColorWhite"
        app:layout_anchor="@id/bottom_app_bar" /> -->


</androidx.coordinatorlayout.widget.CoordinatorLayout>